--- a/src/posts/templates/posts/blogpost_list.html
+++ b/src/posts/templates/posts/blogpost_list.html
@@ -5,7 +5,7 @@
 {% endblock%}
 
 {% block content %}
-    <h1>Le blog de Docstring</h1>
+    <h1>Le blog de Naruto</h1>
     {% for post in posts %}
         <article>
             <div class="post-title">
